# ManchesterBabySimulator

./: CMakeLists.txt  README.md  assembler.cpp  baby.cpp  main.cpp  widget.cpp
